src/test/ui/rfc-2008-non-exhaustive/uninhabited/coercions_same_crate.stderr
error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:31:5
   |
LL | fn cannot_coerce_empty_enum_to_anything(x: UninhabitedEnum) -> A {
   |                                                                - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found enum `UninhabitedEnum`
   |
   = note: expected type `A`
              found type `UninhabitedEnum`

error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:35:5
   |
LL | fn cannot_coerce_empty_tuple_struct_to_anything(x: UninhabitedTupleStruct) -> A {
   |                                                                               - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found struct `UninhabitedTupleStruct`
   |
   = note: expected type `A`
              found type `UninhabitedTupleStruct`

error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:39:5
   |
LL | fn cannot_coerce_empty_struct_to_anything(x: UninhabitedStruct) -> A {
   |                                                                    - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found struct `UninhabitedStruct`
   |
   = note: expected type `A`
              found type `UninhabitedStruct`

error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:43:5
   |
LL | fn cannot_coerce_enum_with_empty_variants_to_anything(x: UninhabitedVariants) -> A {
   |                                                                                  - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found enum `UninhabitedVariants`
   |
   = note: expected type `A`
              found type `UninhabitedVariants`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
